# teltonika_http

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
src/teltonika_http/: config.py  main.py
src/teltonika_http/infra/broker/: redis_client.py
src/teltonika_http/infra/db/: db.py  exceptions.py  models.py
src/teltonika_http/infra/db/alembic/: env.py
src/teltonika_http/infra/db/alembic/versions/: 7a863a2a44cd_initial.py
src/teltonika_http/infra/db/queries/: __init__.py  base_orm.py  orm_protocol.py  sensor_orm.py  transport_orm.py  user_orm.py
src/teltonika_http/routes/: admin.py  auth.py  connection.py  transport.py  users.py
src/teltonika_http/services/: auth.py  base.py  broker.py  connection.py  transport.py
src/teltonika_http/util/: boot.py  dependencies.py  dtos.py  exceptions.py
tests/: conftest.py
tests/unit/services/: test_auth.py
