[project]
name = "teltonika-http"
version = "0.1.0"
description = ""
authors = [
    {name = "Nik Bechthold",email = "nikitabechthold@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "teltonika_http", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-async (>=0.1.1,<0.2.0)",
    "pytest-env (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
